base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
        - name: caddy
          image: caddy:alpine
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: caddy-config
              mountPath: /etc/caddy/
              readOnly: true
      volumes:
        - name: caddy-config
          configMap:
            name: caddy-config
